--- a/development/postgres-edfi/deployment-edfi-ods-2021.yaml
+++ b/development/postgres-edfi/deployment-edfi-ods-2021.yaml
@@ -35,7 +35,7 @@ spec:
           - name: TPDM_ENABLED
             value: "true"
           - name: PGDATA
-            value: /var/lib/postgresql/data/pgdata2021
+            value: /var/lib/postgresql/data/pgdata
         ports:
           - containerPort: 5432
         volumeMounts:
@@ -44,4 +44,4 @@ spec:
       volumes:
         - name: postgredb
           persistentVolumeClaim:
-            claimName: postgresql-pv
+            claimName: pv-db-edfi-ods-2021
