--- a/development/postgres-edfi/persistent-volumes.yaml
+++ b/development/postgres-edfi/persistent-volumes.yaml
@@ -7,19 +7,31 @@ provisioner: kubernetes.io/gce-pd
 parameters:
   type: pd-standard
   replication-type: regional-pd
-allowedTopologies:
-  - matchLabelExpressions:
-      - key: failure-domain.beta.kubernetes.io/zone
-        values:
-          - us-central1-a
-          - us-central1-b
-          - us-central1-c
-          - us-central1-f
+# allowedTopologies:
+#   - matchLabelExpressions:
+#       - key: failure-domain.beta.kubernetes.io/zone
+#         values:
+#           - us-central1-a
+#           - us-central1-b
+#           - us-central1-c
+#           - us-central1-f
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: postgresql-pv
+  name: pv-db-edfi-ods-2021
+spec:
+  storageClassName: regionalpd-storageclass
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 200Gi
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: pv-db-edfi-ods-2022
 spec:
   storageClassName: regionalpd-storageclass
   accessModes:
