--- a/src/service-pgbouncer.yaml
+++ b/src/service-pgbouncer.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pgbouncer-service
+  name: pgbouncer-service # <YOUR-SERVICE-NAME>.default.svc.cluster.local in application
 spec:
   type: NodePort
   ports:
   - name: pgbouncer-service-port
     protocol: TCP
-    port: 6432
-    targetPort: 6432
+    port: 5432
+    targetPort: 5432
     nodePort: 0
   selector:
     app: pgbouncer
