--- a/src/deployment-edfi-admin-app.yaml
+++ b/src/deployment-edfi-admin-app.yaml
@@ -45,7 +45,7 @@ spec:
           - name: API_MODE
             value: "YearSpecific"
           - name: API_EXTERNAL_URL
-            value: ""
+            value: "k12analyticsengineering.dev"
           - name: ENCRYPTION_KEY
             valueFrom:
               secretKeyRef:
@@ -54,7 +54,7 @@ spec:
           - name: ADMINAPP_VIRTUAL_NAME
             value: "edfi-admin-app"
           - name: API_INTERNAL_URL
-            value: ""
+            value: "k12analyticsengineering.dev"
           - name: ADMINAPP_HEALTHCHECK_TEST
             value: "curl -f edfi-admin-app/health"
           - name: ODS_WAIT_POSTGRES_HOSTS
