--- a/src/managed-cert-ingress.yaml
+++ b/src/managed-cert-ingress.yaml
@@ -11,15 +11,22 @@ spec:
   rules:
   - http:
       paths:
+      # - path: /
+      #   pathType: Prefix
+      #   backend:
+      #     service:
+      #       name: edfi-api
+      #       port:
+      #         number: 80
       - path: /api/*
-        pathType: ImplementationSpecific
+        pathType: Prefix
         backend:
           service:
             name: edfi-api
             port:
               number: 80
       - path: /adminapp/*
-        pathType: ImplementationSpecific
+        pathType: Prefix
         backend:
           service:
             name: edfi-admin-app
