--- a/kubernetes/deployment-pgbouncer.yaml
+++ b/kubernetes/deployment-pgbouncer.yaml
@@ -64,7 +64,7 @@ spec:
         command:
           - "/cloud_sql_proxy"
           - "-ip_address_types=PRIVATE"
-          - "-instances=PROJECT_ID:us-central1:edfi-ods-51=tcp:127.0.0.1:5431"
+          - "-instances=<INSTANCE_CONNECTION_NAME>=tcp:127.0.0.1:5431"
         securityContext:
           runAsNonRoot: true
         resources:
