--- a/kubernetes/deployment-edfi-api.yaml
+++ b/kubernetes/deployment-edfi-api.yaml
@@ -48,7 +48,7 @@ spec:
           - name: POSTGRES_PORT
             value: "5432"
           - name: ODS_POSTGRES_HOST
-            value: "EdFi_{0}"
+            value: pgbouncer-service.default.svc.cluster.local
           - name: ADMIN_POSTGRES_HOST
             value: pgbouncer-service.default.svc.cluster.local
           - name: ApiSettings__PathBase
@@ -57,5 +57,7 @@ spec:
             value: "pgbouncer-service.default.svc.cluster.local "
           - name: API_MODE
             value: "YearSpecific"
+          - name: TPDM_ENABLED
+            value: "true"
         ports:
           - containerPort: 80
